# Drinks_Quality

./: .gitignore  README.md  config.yaml  dvc.yaml  main.py  my_tests.ipynb  params.yaml  pyproject.toml  requirements.txt  schema.yaml  setup.py  template.py
Research/: EDA.ipynb  model_selection.ipynb
artifacts/data_ingestion/: water_potability.csv
src/drinks_quality/: __init__.py
src/drinks_quality/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/drinks_quality/config/: configuration.py
src/drinks_quality/constants/: __init__.py
src/drinks_quality/entity/: config_entity.py
src/drinks_quality/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_trainer_pipeline.py
src/drinks_quality/utils/: common.py
